# mlcw2_group2

./: README.md  app.py  pyproject.toml  requirements.txt
models/: anomaly.keras  autoencoder.keras  ffn.keras  fnn.h5  lstm.keras  rnn.keras
templates/: index.html
