[tool.poetry]
name = "repl-nix-mlcw2group2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_mlcw2group2"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
keras = "^3.3.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
